cabal-version:     3.0
name:              e2e-tests
version:           1.2.0.0
license:           Apache-2.0
license-files:
  LICENSE
  NOTICE

author:            James Browning
maintainer:        james.browning@iohk.io
homepage:          https://github.com/input-output-hk/antaeus#readme
bug-reports:       https://github.com/input-output-hk/antaeus/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/antaeus#readme>

build-type:        Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/antaeus

pkgconfig-depends: libblst

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , cardano-binary
    , cardano-crypto-class           ==2.1.1.0
    , cardano-crypto-wrapper
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-protocol-tpraos
    , cardano-slotting
    , cardano-testnet
    , iohk-monitoring
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-diffusion
    , ouroboros-consensus-protocol
    , ouroboros-network-api

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base
    , bytestring
    , containers
    , filepath
    , lens
    , mwc-random
    , network
    , optparse-applicative
    , prettyprinter
    , process
    , random
    , serialise
    , sqlite-simple
    , stm
    , streaming
    , text
    , time
    , transformers-except
    , unliftio
    , unordered-containers

  if (os(osx) || os(linux))
    build-depends: unix

test-suite antaeus-test
  import:         lang
  ghc-options:    -Wno-unused-packages
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Helpers.Common
    Helpers.Query
    Helpers.ScriptUtils
    Helpers.Test
    Helpers.TestData
    Helpers.Testnet
    Helpers.TestResults
    Helpers.Tx
    Helpers.TypeConverters
    Helpers.Utils
    OldPlutus.CBOR.Extras
    OldPlutus.Prettyprinter.Extras
    OldPlutus.Scripts
    PlutusScripts.Always
    PlutusScripts.Helpers
    PlutusScripts.SECP256k1
    PlutusScripts.V1TxInfo
    PlutusScripts.V2TxInfo
    Spec.AlonzoFeatures
    Spec.BabbageFeatures
    Spec.Builtins.SECP256k1

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api:{cardano-api, gen}
    , cardano-binary
    , cardano-crypto-class            ==2.1.1.0
    , cardano-ledger-core
    , cardano-testnet
    , iohk-monitoring
    , ouroboros-network
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base
    , bytestring
    , cborg
    , containers
    , deepseq
    , directory
    , exceptions
    , filepath
    , flat
    , hedgehog
    , hedgehog-extras
    , prettyprinter
    , serialise
    , stm
    , streaming
    , tagged
    , tasty
    , tasty-hedgehog
    , temporary
    , xml
