cabal-version:     3.0
name:              e2e-tests
version:           1.2.0.0
license:           Apache-2.0
license-files:
  LICENSE
  NOTICE

author:            James Browning
maintainer:        james.browning@iohk.io
homepage:          https://github.com/input-output-hk/antaeus#readme
bug-reports:       https://github.com/input-output-hk/antaeus/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/antaeus#readme>

build-type:        Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/antaeus

pkgconfig-depends: libblst

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api                    ^>=8.36.0.1
    , cardano-binary
    , cardano-crypto-class
    , cardano-crypto-wrapper
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-node-emulator
    , cardano-node-socket-emulator
    , cardano-protocol-tpraos
    , cardano-slotting
    , cardano-strict-containers
    , cardano-testnet
    , iohk-monitoring
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-diffusion
    , ouroboros-consensus-protocol
    , ouroboros-network-api

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base                  >=4.9 && <5
    , bytestring
    , containers
    , filepath
    , lens
    , mtl
    , mwc-random
    , network
    , optparse-applicative
    , prettyprinter
    , process
    , random
    , serialise
    , sqlite-simple
    , stm
    , streaming
    , text
    , time
    , transformers-except
    , unliftio
    , unordered-containers

  if (os(osx) || os(linux))
    build-depends: unix

test-suite antaeus-test
  import:         lang
  ghc-options:    -Wno-unused-packages
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Helpers.Committee
    Helpers.Common
    Helpers.DRep
    Helpers.Error
    Helpers.Query
    Helpers.ScriptUtils
    Helpers.StakePool
    Helpers.Staking
    Helpers.Test
    Helpers.TestData
    Helpers.Testnet
    Helpers.TestResults
    Helpers.Tx
    Helpers.TypeConverters
    Helpers.Utils
    PlutusScripts.Basic.Common
    PlutusScripts.Basic.V_1_0
    PlutusScripts.Basic.V_1_1
    PlutusScripts.BLS
    PlutusScripts.BLS.AggregateSigWithMultipleKeys.Common
    PlutusScripts.BLS.AggregateSigWithMultipleKeys.V_1_1
    PlutusScripts.BLS.AggregateSigWithSingleKey.Common
    PlutusScripts.BLS.AggregateSigWithSingleKey.V_1_1
    PlutusScripts.BLS.Common
    PlutusScripts.BLS.Groth16.Common
    PlutusScripts.BLS.Groth16.V_1_1
    PlutusScripts.BLS.SchnorrG1.Common
    PlutusScripts.BLS.SchnorrG1.V_1_1
    PlutusScripts.BLS.SchnorrG2.Common
    PlutusScripts.BLS.SchnorrG2.V_1_1
    PlutusScripts.BLS.SimpleSignAndVerify.Common
    PlutusScripts.BLS.SimpleSignAndVerify.V_1_1
    PlutusScripts.BLS.VerifyOverG1.Common
    PlutusScripts.BLS.VerifyOverG1.V_1_1
    PlutusScripts.BLS.VerifyOverG2.Common
    PlutusScripts.BLS.VerifyOverG2.V_1_1
    PlutusScripts.BLS.Vrf.Common
    PlutusScripts.BLS.Vrf.V_1_1
    PlutusScripts.Governance.Common
    PlutusScripts.Governance.V_1_1
    PlutusScripts.Hashing.Common
    PlutusScripts.Hashing.V_1_0
    PlutusScripts.Hashing.V_1_1
    PlutusScripts.Helpers
    PlutusScripts.SECP256k1.Common
    PlutusScripts.SECP256k1.V_1_0
    PlutusScripts.SECP256k1.V_1_1
    PlutusScripts.V1TxInfo
    PlutusScripts.V2TxInfo
    PlutusScripts.V3TxInfo
    Spec.AlonzoFeatures
    Spec.BabbageFeatures
    Spec.Builtins
    Spec.Builtins.BLS
    Spec.Builtins.Hashing
    Spec.Builtins.SECP256k1
    Spec.ConwayFeatures
    Spec.WriteScriptFiles

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api           ^>=8.36.0.1
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-core
    , cardano-testnet
    , iohk-monitoring
    , ouroboros-network
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base
    , bytestring
    , cborg
    , containers
    , deepseq
    , directory
    , exceptions
    , filepath
    , flat
    , hedgehog
    , hedgehog-extras
    , prettyprinter
    , serialise
    , stm
    , streaming
    , tagged
    , tasty
    , tasty-hedgehog
    , temporary
    , xml
